# betternex

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Navigation.vue
src/pages/: Archive.vue  Grades.vue  Home.vue
