[package]
name = "testui-rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trainex = { git = "ssh://git@github.com/patrickpahlke03/trainex-rs.git", rev = "299e285f"}
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-async-drop = "0.1.0"
dotenv = "0.15.0"
directories = "5.0.1"
native-dialog = "0.7.0"
futures = "0.3.30"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
custom-protocol = ["tauri/custom-protocol"]

